# uav-ros

src/flightPattern/: CMakeLists.txt  package.xml
src/flightPattern/include/: flightPatterns.hpp
src/flightPattern/msg/: Trajectory.msg
src/flightPattern/src/: flightPatternTest.cpp  flightPatterns.cpp
src/preflight/: CMakeLists.txt  package.xml
